# Khalims-Wills

./: .codecov.yml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main-branch-ci.yml
src/ltcd/array/: array_partition.cxx  array_partition.hxx  jump_game.cxx  jump_game.hxx
test/: main.cxx
test/ltcd/array/: array_partition_test.cxx  array_partition_test.hxx  jump_game_test.cxx  jump_game_test.hxx
